# ChangeLog for app-editors/emacs
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.408 2011/02/02 17:41:55 ulm Exp $

  02 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-22.3-r7.ebuild,
  emacs-23.2-r3.ebuild:
  Fix duplicate items in GNU Info directory, upstream bug 7942.

  31 Jan 2011; Ulrich Mueller <ulm@gentoo.org> emacs-23.2-r3.ebuild:
  Add explicit --without-ns configure option.

*emacs-23.2-r3 (30 Jan 2011)
*emacs-22.3-r7 (30 Jan 2011)
*emacs-21.4-r23 (30 Jan 2011)

  30 Jan 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-21.4-r23.ebuild,
  +emacs-22.3-r7.ebuild, +emacs-23.2-r3.ebuild:
  Apply changes from prefix overlay and from bug 268793. Thanks to Matsui
  Tetsushi <VED03370@nifty.ne.jp> and Fabian Groffen <grobian@gentoo.org>.
  Respect the --with-crt-dir configure option also on 32 bit architectures,
  fixes bug 350532. Remove unnecessary automake dependency. Don't compress
  GNU Info dir. Update ebuilds to EAPI 4, for docompress and REQUIRED_USE.

  29 Dec 2010; Ulrich Mueller <ulm@gentoo.org> emacs-22.3-r6.ebuild,
  emacs-23.2-r2.ebuild:
  Don't hardcode user for game score files.

  14 Nov 2010; Ulrich Mueller <ulm@gentoo.org> -emacs-21.4-r20.ebuild,
  -emacs-22.3-r4.ebuild, -emacs-23.1-r3.ebuild:
  Remove old.

  14 Nov 2010; Raúl Porcel <armin76@gentoo.org> emacs-21.4-r22.ebuild,
  emacs-22.3-r6.ebuild, emacs-23.2-r2.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #344295

  09 Nov 2010; Markus Meier <maekke@gentoo.org> emacs-21.4-r22.ebuild,
  emacs-22.3-r6.ebuild, emacs-23.2-r2.ebuild:
  arm stable, bug #344295

  09 Nov 2010; Jeroen Roovers <jer@gentoo.org> emacs-21.4-r22.ebuild,
  emacs-22.3-r6.ebuild, emacs-23.2-r2.ebuild:
  Stable for HPPA PPC (bug #344295).

  07 Nov 2010; Ulrich Mueller <ulm@gentoo.org> emacs-21.4-r22.ebuild,
  emacs-22.3-r6.ebuild, -emacs-23.2.ebuild, emacs-23.2-r2.ebuild: