@@ -12,6 +12,8 @@ DIST emacs-22.3.tar.gz 39587396 RMD160 a7eed5099d0cab25f34152f1b18b5c1b4e2e0746 
 DIST emacs-23.2-patches-2.tar.bz2 2248 RMD160 e8e6d8ac11b9d9f61edca4046381f93deec24d17 SHA1 261f32cde33890d77efde5448c6aedf72377f1f1 SHA256 5a5c257847ec952d4ca8e9c1c296ae906043b9fb989c40042d25cdb27a81768c
 DIST emacs-23.2-patches-4.tar.bz2 3599 RMD160 f807bb451ba0ceb78bd83e03dbc251b0ef2fd8b8 SHA1 ffe81a3c26f565bb110afc140088675b60243b82 SHA256 4d78a6f63f780861b1c294f1d2dae6645fa4c256e823a1221c3f59eaf291ba91
 DIST emacs-23.2.tar.bz2 38376047 RMD160 b7441be0a32e78e02f108dcb3b09b531c6849d95 SHA1 b46e6b33e1f5e24ede0ecd0d8703b64847c83946 SHA256 ffd466fa5b06c0451612210190d2feb14b2d7ca9dd41893357d2201dd28526c5
+DIST emacs-23.3-rc1.tar.gz 47666911 RMD160 d32ec80b29f79f950ab5547a45ae6434edf24618 SHA1 cc0d85a2f1cc59ab008f5ef96f5c37318f1a6e0b SHA256 c0d11df5e95d1b4b8f56344f0835f06592eafbbf397893ccc3bc71f0cefaaaa3
+DIST emacs-23.3_rc1-patches-1.tar.bz2 1675 RMD160 f167c15e8d1c6a9629967aa3f910cc476e22315e SHA1 51522c8af1c0991ef189f8537e6636f7e1b30553 SHA256 caec6e052a564e75de2873e2d0e4ffb8169bde3c4f786e1a04b8781df31456fe
 DIST leim-21.4.tar.gz 3291433 RMD160 89e1108bfe06425a0d6b4d941f9c297551bafcca SHA1 dd63f9aca1a58d40d9d426dd410fb627230974f7 SHA256 db24946985dd644bfed18815d6e991dad27f8ab1fd5823dd6dc4eb8dcd04333b
 EBUILD emacs-18.59-r6.ebuild 2736 RMD160 23d2b7c5cbf0deb8d76035a77fe803206581a810 SHA1 997a0271b8b4114867b308843180a59ab03fcf63 SHA256 bcc584e1ee5a50c6a6539458acf0ce229f79981430fe624e4f0301c63ddaf14a
 EBUILD emacs-21.4-r22.ebuild 5176 RMD160 1fa570948a1de7c16e24fd97bf98062d08c76786 SHA1 f398f96f53735b83b0f7ef0333573da2b094c0a6 SHA256 f2b61e2616727544f5f4e14f45567014d24162986bd10e411aaa904ace6d65fd
@@ -20,12 +22,13 @@ EBUILD emacs-22.3-r6.ebuild 8052 RMD160 444100251b38e4c011889290c70e1e1d0a29416c
 EBUILD emacs-22.3-r7.ebuild 7921 RMD160 dff6ec3eecfecfef38cb63587fdfa72e16727c3a SHA1 d21be9d321e4039ad00df13ccd1c20062b1fb74b SHA256 bcf19019cb6b517d49921061b5763a1b416c70425ff83909f8e7bb9fd3a4c9e7
 EBUILD emacs-23.2-r2.ebuild 10008 RMD160 47d6ab99e7483fe18a7fece0a31f1f0ad19fdfef SHA1 57367184d44c8e170f3186cf84c007a4d9be7fd3 SHA256 44fd93a28deb705d0cdbf741bb3ce65ae0c6bdc1b06d147b76abf085cd1cc4f9
 EBUILD emacs-23.2-r3.ebuild 10106 RMD160 e2aa2d221aa78bf7a0dac97d93fac57895130563 SHA1 c958bf2de91e39317e455628ce787fc7b03d9649 SHA256 d708191def58c7fa19256f785616608c0709ff8c5c5a5c7c11cb882cb9844ea6
-MISC ChangeLog 58275 RMD160 56b69ad8475d830db6918e7b940dfc840d0c62c8 SHA1 57afff4bd6b82c9eb46119b1cc653c8507cd0e6f SHA256 4a3f0e4ec5aba50119ca2f68df8b925cb1bbe20ec3765b02dcc6ab3c4e8349e2
-MISC metadata.xml 1745 RMD160 c60885ffe070e2e88f9a5b8def28fd20d05e5de3 SHA1 c4480fbafe47b334f878d9e87328e37c20cba56b SHA256 86f6e3328b4abfbf278876ab4ab7c546c5164713e736b14ad7cab4c68825d010
+EBUILD emacs-23.3_rc1.ebuild 10098 RMD160 15c1ae81e9415c705af874c44302231205abc031 SHA1 d8e868999d34afa82ab1ee633057872ef5344722 SHA256 f6df1b6de3cd70b50662b02c62112e00773b6aae03c1c3839ac7abe9c2705ff1
+MISC ChangeLog 58444 RMD160 e18b2bb0cf31a96207b72b9b20eebf896778500f SHA1 115529347c94fb838b344695a6508383a82fc351 SHA256 40c439e6f4eae07d1645e9907a8ae57e3bd04df47293da36c4929874e2955af6
+MISC metadata.xml 1704 RMD160 efbac0e266304bf11ffb64c3cdfecac81e7ff177 SHA1 d12430143adab307f896d1c72c02ed40a8f62822 SHA256 22b564149011a32c17256ac39c2d6d49be01b52f9ddddeb82795ff9b66a46ed1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1hb0oACgkQOeoy/oIi7ux0UACfUOPnY8Jh2EFl6o21HNtxxfXO
-IW8An1g03qar0R5pkgPMFfisA0DCB6BO
-=Htx/
+iEYEARECAAYFAk1snsYACgkQOeoy/oIi7uxHQQCgrjkEGF0Rcaoq+ssxJKjQ+CO+
+VmAAnjVQpHMiqNZxT0ZB9G3FNKhrg6NK
+=vcGI
 -----END PGP SIGNATURE-----
