@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/emacs
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.408 2011/02/02 17:41:55 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/emacs/ChangeLog,v 1.409 2011/03/01 07:16:06 ulm Exp $
+
+*emacs-23.3_rc1 (01 Mar 2011)
+
+  01 Mar 2011; Ulrich Mueller <ulm@gentoo.org> +emacs-23.3_rc1.ebuild,
+  metadata.xml:
+  Version bump. The sound USE flag is global now.
 
   02 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-22.3-r7.ebuild,
   emacs-23.2-r3.ebuild:
